  * Remove partially downloaded files before attempting a new download
  * Cache ISO md5 calculations to avoid recalculating the md5 for the
    same file (LP: 342250)
  * Ensure that the local ISO path is stored upon successful download
  * Point isolist.ini to beta release (only for Ubuntu ISO)
  * Had the wrong URL for beta in isolist.ini (thanks Colin Watson!)
  * Added beta URL for Kubuntu
  * Fixed Kubuntu package name and URLs
  * Disabled ISO backup because download resume is not fully supported
    at the moment
  * Isolist.ini now points to the final release URLs
  * Allow the uninstaller to delete the directory containing itself by
    running the python code from a different process/location (LP:
    #341605)

  [ Hampus Wessman ]
  * Added a new metalink parser
  * Fixed the check for wine so that it looks in additonal places
  * Added tools/wine to the branch
  * Fixed a bug in virtualdisk.py
  * Added deletion of temporary directory
  * Fixed archive signature search in unpack.c
  * Removed some debugging code

  [ Evan Dandrea ]
  * Fixed a typo in the translation template.
  * Require adminstrator privileges (LP: #340400).  Thanks Agostino Russo!
  * os.environ is a dictionary, not a callable method.
  * Only uncompress files in the boot directory (LP: #341640).  Thanks Agostino
    Russo!
  * Call the correct bootloader installation method for each version of
    Windows.
  * Use registry.{get,set}_value not the nonexistent
    registry.{get,set}_key.
  * Fix typo where a bcdedit command was accidentally created using
    concatenation.
  * subprocess.Popen takes a list of string arguments.
  * Bcdedit requires absolute paths.
  * There's no need to quote arguments to commands when using Popen.  It
    passes them straight through, so you'll get "Ubuntu Linux" instead of
    Ubuntu Linux.
  * Removed an erroneous closing parentheses in the use_cd check.

 -- Agostino Russo <agostino.russo@gmail.com>  Fri, 03 Apr 2009 03:01:58 +0100